2012-10-20  Florian Holeczek (florianh AT apache DOT org)

       * some fixes for JSPWIKI-749 and CheckStyle version 5.6

2012-10-09  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * added Apache License Header to files which were missing it 
         (cfr. with http://s.apache.org/EDd).

2012-10-08  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * Added rat-report task. It requires at least Apache Ant 1.7.1, though.
       
       * .java files now conform strictly to Apache License Header (cfr. with 
         http://s.apache.org/EDd).

2012-09-25  Florian Holeczek (florianh AT apache DOT org)

       * no version bump

       * minor update to LICENSE file (YUI Compressor version number)

2012-09-23  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * upgraded Yui compressor to 2.4.7, 2.4.2 from Central is broken. Thanks to Peter Hormanns
         for noticing.
       
2012-09-18  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * tomcat jars downgraded to 5.5.23 so they can be downloaded from Central. Completes JSPWIKI-746
         and therefore closes JSPWIKI-744
         
       * jetty upgraded to 7.6.7.v20120910 and selenium-server downloaded from their site, to avoid 
         downloading anything from svn.apache.org during build time

2012-09-10   Harry Metske <metskem@apache.org>
       
       * 2.9.0-incubating-12
       
       * rewrote TestContainer to jetty version 7
       
       * upgraded to selenium-server-standalone-2.25.0.jar 

2012-09-06  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * 2.9.0-incubating-11
       
       * upgraded jrcs-diff to 0.4.2, as part of JSPWIKI-746
       
       * JSPWIKI-747: Dependencies currently unavailable at Central repo

2012-08-29  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * no version bump
       
       * JSPWIKI-745: Dependencies currently downloadable from Central repo
       