@@ -1,6 +1,4 @@
 /* 
-   JSPWiki - a JSP-based WikiWiki clone.
-
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
     distributed with this work for additional information
