@@ -1,3 +1,9 @@
+2012-10-21  Florian Holeczek (florianh AT apache DOT org)
+
+       * some further fixes to license headers
+
+       * build improvements: checksum files in correct format, added SHA-512 hash
+
 2012-10-20  Florian Holeczek (florianh AT apache DOT org)
 
        * some fixes for JSPWIKI-749 and CheckStyle version 5.6
